--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
   }
 
   .dark,
-  [data-kb-theme="dark"] {
+  [data-kb-theme='dark'] {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
 
@@ -147,8 +147,8 @@
   body {
     @apply bg-background text-foreground;
     font-feature-settings:
-      "rlig" 1,
-      "calt" 1;
+      'rlig' 1,
+      'calt' 1;
   }
 }
 
@@ -207,7 +207,7 @@
 
 @font-face {
   font-family: Roboto;
-  src: url("/fonts/RobotoMono-Medium.ttf") format("truetype");
+  src: url('/fonts/RobotoMono-Medium.ttf') format('truetype');
   font-weight: 400;
   font-display: fallback;
 }
